--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,15 @@
 cmake_minimum_required(VERSION 3.5)
-project(ArgsParse)
+project(args_parse)
 
 set(CMAKE_BUILD_TYPE Release)
 
 include_directories(
-	${ArgsParse_SOURCE_DIR}/include
+	${${PROJECT_NAME}_SOURCE_DIR}/include
 )
 
-file(GLOB_RECURSE sources_ArgsParse ${ArgsParse_SOURCE_DIR}/src/*.cpp)
+file(GLOB_RECURSE SRC_FILES ${${PROJECT_NAME}_SOURCE_DIR}/src/*.cpp)
 
-add_library(ArgsParse ${sources_ArgsParse})
+add_library(${PROJECT_NAME} ${SRC_FILES})
 
-target_link_libraries(ArgsParse
+target_link_libraries(${PROJECT_NAME}
 )
